--- a/addons/google_auth/views/res_config_settings_views.xml
+++ b/addons/google_auth/views/res_config_settings_views.xml
@@ -5,24 +5,25 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="base.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//div[@data-key='general_settings']" position="inside">
-                <h2>Google OAuth2 Settings</h2>
-                <div class="row mt16 o_settings_container">
-                    <div class="col-12 col-lg-6 o_setting_box">
-                        <div class="o_setting_left_pane"/>
-                        <div class="o_setting_right_pane">
-                            <span class="o_form_label">Google OAuth Credentials</span>
-                            <div class="text-muted">
-                                Configure Google OAuth2 credentials
-                            </div>
-                            <div class="content-group">
-                                <div class="row mt16">
-                                    <label class="col-lg-3" for="google_oauth_client_id"/>
-                                    <field name="google_oauth_client_id"/>
+            <xpath expr="//div[hasclass('settings')]" position="inside">
+                <div class="app_settings_block" data-string="Google OAuth2" string="Google OAuth2" data-key="google_auth">
+                    <h2>Google OAuth2 Settings</h2>
+                    <div class="row mt16 o_settings_container">
+                        <div class="col-12 col-lg-6 o_setting_box">
+                            <div class="o_setting_right_pane">
+                                <span class="o_form_label">Google OAuth Credentials</span>
+                                <div class="text-muted">
+                                    Configure Google OAuth2 credentials
                                 </div>
-                                <div class="row mt16">
-                                    <label class="col-lg-3" for="google_oauth_client_secret"/>
-                                    <field name="google_oauth_client_secret" password="True"/>
+                                <div class="content-group">
+                                    <div class="row mt16">
+                                        <label class="col-lg-3" for="google_oauth_client_id"/>
+                                        <field name="google_oauth_client_id"/>
+                                    </div>
+                                    <div class="row mt16">
+                                        <label class="col-lg-3" for="google_oauth_client_secret"/>
+                                        <field name="google_oauth_client_secret" password="True"/>
+                                    </div>
                                 </div>
                             </div>
                         </div>
